server/error.txt
Output.java:1: error: class, interface, or enum expected
safj;aklsd
^
Output.java:1: error: reached end of file while parsing
safj;aklsd
     ^
2 errors
